 - [ZBXNEXT-483] added vfs.file.contents[file,encoding] check (asaveljevs)
 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.4rc3

 - [ZBX-3294] fixed host status change confirmation dialog (Vedmak)
 - [ZBX-3301] fixed server crash after libssh2_userauth_list() when processing SSH checks (asaveljevs)
 - [ZBX-2395] fixed sending of the same message to the same user using different media types (asaveljevs)
 - [ZBXNEXT-586] added sensor[device,sensor,<mode>] check for Linux 2.4 (asaveljevs)
 - [ZBXNEXT-586] added sensor[device,sensor,<mode>] check for OpenBSD; thanks to Robert Nagy (asaveljevs)
 - [ZBX-3252] fixed graph height calculations when graph height was less then 120px (KB)
 - [ZBX-3261] fixed second level template deletion (Aly)
 - [ZBX-3295] fixed compilation warnings in eztexting module if code configured without cURL library (Sasha)
 - [ZBX-2862] it is now not possible to delete host group or user group used in scripts (KB)
 - [ZBX-3281] fixed system.cpu.util[] for all processors combined on NetBSD (asaveljevs)
 - [ZBX-3006] fixed some forms <input> elements are put inside <table> tag (Vedmak)
 - [ZBXNEXT-176] added zabbix server name input during setup (Vedmak)
 - [ZBX-3253] added schema selection for db2 setup and a configuration file parameter on the server (asaveljevs,Vedmak)
 - [ZBX-3239] fixed error in Proxies screen on Oracle, when no proxy defined (Vedmak)
 - [ZBX-3273] removed renewed auto registration notifications for already created hosts (Sasha)
 - [ZBX-1294] disabled "Add" and "Toggle input method" for templated trigger expressions (KB)
 - [ZBX-3223] it is now possible to gather network interface statistics under a normal user on OpenBSD; thanks to Robert Nagy (asaveljevs,Sasha)